--- a/src/GUI/fHoanThanh_NhapHang.form
+++ b/src/GUI/fHoanThanh_NhapHang.form
@@ -116,6 +116,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButtonLuuVaThoatMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLuuVaThoatActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonLuuVaXuatBaoCao">
