--- a/src/GUI/fLoSanPham.form
+++ b/src/GUI/fLoSanPham.form
@@ -242,7 +242,7 @@
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="jTableThongTinLo.setRowHeight(30);">
                       <Table columnCount="4" rowCount="4">
                         <Column editable="false" title="Id L&#xf4;" type="java.lang.Object"/>
-                        <Column editable="false" title="S&#x1ed1; l&#x1b0;&#x1ee3;ng l&#xf4;" type="java.lang.Object"/>
+                        <Column editable="false" title="SL L&#xf4; Ban &#x110;&#x1ea7;u" type="java.lang.Object"/>
                         <Column editable="false" title="T&#xea;n s&#x1ea3;n ph&#x1ea9;m" type="java.lang.Object"/>
                         <Column editable="false" title="Ng&#xe0;y nh&#x1ead;p" type="java.lang.Object"/>
                       </Table>
