--- a/src/GUI/fKiemKe.form
+++ b/src/GUI/fKiemKe.form
@@ -172,21 +172,20 @@
                 <Component class="javax.swing.JTable" name="jTableKhoHienTai">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="9" rowCount="4">
+                      <Table columnCount="8" rowCount="4">
                         <Column editable="false" title="ID" type="java.lang.Object"/>
                         <Column editable="true" title="T&#xea;n S&#x1ea3;n Ph&#x1ea9;m" type="java.lang.Object"/>
                         <Column editable="false" title="HSD" type="java.lang.Object"/>
-                        <Column editable="false" title="SL L&#xf4;" type="java.lang.Object"/>
-                        <Column editable="false" title="SL th&#x1ef1;c t&#x1ebf;" type="java.lang.Object"/>
+                        <Column editable="false" title="L&#xf4; T&#x1ed3;n" type="java.lang.Object"/>
+                        <Column editable="false" title="L&#xf4; Ki&#x1ec3;m k&#xea;" type="java.lang.Object"/>
                         <Column editable="false" title="SL Hao M&#xf2;n" type="java.lang.Object"/>
-                        <Column editable="false" title="T&#x1ed5;ng SP" type="java.lang.Object"/>
                         <Column editable="false" title="Ng&#xe0;y ki&#x1ec3;m k&#xea;" type="java.lang.Object"/>
                         <Column editable="false" title="T&#xec;nh tr&#x1ea1;ng" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="40" minWidth="40" prefWidth="40" resizable="true">
+                        <Column maxWidth="60" minWidth="60" prefWidth="60" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -202,11 +201,6 @@
                           <Renderer/>
                         </Column>
                         <Column maxWidth="70" minWidth="70" prefWidth="70" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -412,7 +406,7 @@
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jComboBoxLoaiSP" linkSize="1" alignment="0" min="-2" pref="123" max="-2" attributes="0"/>
                                               <Component id="jTextFieldThoiGian" linkSize="1" alignment="0" min="-2" pref="125" max="-2" attributes="0"/>
-                                              <Component id="jTextField_SL_Lo" linkSize="1" alignment="0" min="-2" pref="127" max="-2" attributes="0"/>
+                                              <Component id="jTextField_Lo_ton" linkSize="1" alignment="0" min="-2" pref="127" max="-2" attributes="0"/>
                                               <Component id="jTextField_id_kho" linkSize="1" alignment="0" min="-2" pref="127" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
@@ -452,7 +446,7 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jTextField_SL_Lo" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jTextField_Lo_ton" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -529,7 +523,7 @@
                     <Property name="text" type="java.lang.String" value="SL L&#xf4; :"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="jTextField_SL_Lo">
+                <Component class="javax.swing.JTextField" name="jTextField_Lo_ton">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="14" style="0"/>
