--- a/src/GUI/fCreate_PhieuXuat_sub.form
+++ b/src/GUI/fCreate_PhieuXuat_sub.form
@@ -117,7 +117,7 @@
                     <Column editable="false" title="ID l&#xf4;" type="java.lang.Object"/>
                     <Column editable="false" title="T&#xea;n s&#x1ea3;n ph&#x1ea9;m" type="java.lang.Object"/>
                     <Column editable="false" title="SL l&#xf4;" type="java.lang.Object"/>
-                    <Column editable="false" title="H&#x1ea1;n s&#x1eed; d&#x1ee5;ng" type="java.lang.Object"/>
+                    <Column editable="false" title="" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
