--- a/src/GUI/fXuat_Kho.form
+++ b/src/GUI/fXuat_Kho.form
@@ -194,7 +194,7 @@
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="6" rowCount="4">
-                        <Column editable="false" title="ID" type="java.lang.Object"/>
+                        <Column editable="false" title="ID xu&#x1ea5;t" type="java.lang.Object"/>
                         <Column editable="false" title="Th&#x1edd;i gian xu&#x1ea5;t" type="java.lang.Object"/>
                         <Column editable="false" title="T&#xea;n s&#x1ea3;n ph&#x1ea9;m" type="java.lang.Object"/>
                         <Column editable="false" title="Lo&#x1ea1;i s&#x1ea3;n ph&#x1ea9;m" type="java.lang.Object"/>
@@ -204,7 +204,7 @@
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" preCode="jTableXuatKho.setAutoCreateRowSorter(true);" postCode="jTableXuatKho.setRowHeight(30);">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="30" minWidth="30" prefWidth="30" resizable="true">
+                        <Column maxWidth="60" minWidth="60" prefWidth="60" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
